fix: align product image in mini cart

--- a/assets/css/woocommerce-rtl.css
+++ b/assets/css/woocommerce-rtl.css
@@ -1177,7 +1177,8 @@ section.exclusive .tns-visually-hidden {
   position: absolute;
   right: 30px;
   width: 60px;
-  top: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   margin-right: 0;
 }
 
