--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -1179,7 +1179,8 @@ section.exclusive .tns-visually-hidden {
   position: absolute;
   left: 30px;
   width: 60px;
-  top: 15px;
+  top: 50%;
+  transform: translateY(-50%);
   margin-left: 0;
 }
 
